[gd_scene load_steps=5 format=3 uid="uid://bvush8vhdr5xa"]

[ext_resource type="Script" path="res://MissionGui.gd" id="1_dgafi"]
[ext_resource type="PackedScene" uid="uid://b220oo4s6vl43" path="res://mission_enemy_panel.tscn" id="2_aqv3g"]
[ext_resource type="PackedScene" uid="uid://cbr7ln8tcfqk2" path="res://mission_environment_panel.tscn" id="3_u4fe6"]

[sub_resource type="LabelSettings" id="LabelSettings_ly2ld"]
line_spacing = 2.0
font_size = 14
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="MissionGui" type="Node2D"]
script = ExtResource("1_dgafi")

[node name="BossSpecials" type="GridContainer" parent="."]
offset_left = 791.444
offset_top = 46.703
offset_right = 831.444
offset_bottom = 566.703
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 130

[node name="Special" type="Control" parent="BossSpecials"]
layout_mode = 2

[node name="Name" type="Label" parent="BossSpecials/Special"]
layout_mode = 0
offset_top = -2.0
offset_right = 500.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 16
text = "Electric Barrage"
autowrap_mode = 2

[node name="Descripion" type="Label" parent="BossSpecials/Special"]
layout_mode = 0
offset_top = 23.0
offset_right = 500.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 12
text = "Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit
"
autowrap_mode = 2

[node name="Special2" type="Control" parent="BossSpecials"]
layout_mode = 2

[node name="Name" type="Label" parent="BossSpecials/Special2"]
layout_mode = 0
offset_top = -2.0
offset_right = 500.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 16
text = "Electric Barrage"
autowrap_mode = 2

[node name="Descripion" type="Label" parent="BossSpecials/Special2"]
layout_mode = 0
offset_top = 23.0
offset_right = 500.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 12
text = "Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit
"
autowrap_mode = 2

[node name="Special3" type="Control" parent="BossSpecials"]
layout_mode = 2

[node name="Name" type="Label" parent="BossSpecials/Special3"]
layout_mode = 0
offset_top = -2.0
offset_right = 500.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 16
text = "Electric Barrage"
autowrap_mode = 2

[node name="Descripion" type="Label" parent="BossSpecials/Special3"]
layout_mode = 0
offset_top = 23.0
offset_right = 500.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 12
text = "Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit
"
autowrap_mode = 2

[node name="Special4" type="Control" parent="BossSpecials"]
layout_mode = 2

[node name="Name" type="Label" parent="BossSpecials/Special4"]
layout_mode = 0
offset_top = -2.0
offset_right = 500.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 16
text = "Electric Barrage"
autowrap_mode = 2

[node name="Descripion" type="Label" parent="BossSpecials/Special4"]
layout_mode = 0
offset_top = 23.0
offset_right = 500.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 12
text = "Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit
"
autowrap_mode = 2

[node name="Special5" type="Control" parent="BossSpecials"]
layout_mode = 2

[node name="Name" type="Label" parent="BossSpecials/Special5"]
layout_mode = 0
offset_top = -2.0
offset_right = 500.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 16
text = "Electric Barrage"
autowrap_mode = 2

[node name="Descripion" type="Label" parent="BossSpecials/Special5"]
layout_mode = 0
offset_top = 23.0
offset_right = 500.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 12
text = "Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit
"
autowrap_mode = 2

[node name="BossDescription" type="Label" parent="."]
offset_left = 357.754
offset_top = 70.4792
offset_right = 757.754
offset_bottom = 270.479
text = "Boss is scary
Boss is scary
Boss is scary
Boss is scary
Boss is scary
Boss is scary
Boss is scary"
label_settings = SubResource("LabelSettings_ly2ld")
autowrap_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 357.754
offset_top = 282.851
offset_right = 757.754
offset_bottom = 302.851
text = "Mission:"
label_settings = SubResource("LabelSettings_ly2ld")
autowrap_mode = 2

[node name="MissionDescription" type="Label" parent="."]
offset_left = 357.754
offset_top = 304.076
offset_right = 757.754
offset_bottom = 504.076
text = "Kill The Boss"
label_settings = SubResource("LabelSettings_ly2ld")
autowrap_mode = 2

[node name="EnemyPanel" parent="." instance=ExtResource("2_aqv3g")]

[node name="EnvironmentPanel" parent="." instance=ExtResource("3_u4fe6")]
offset_left = 48.8989
offset_top = 478.554
offset_right = 48.8989
offset_bottom = 478.554

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OkButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 1218.07
offset_top = 687.88
offset_right = 1458.07
offset_bottom = 807.88
theme_override_font_sizes/font_size = 34
text = "OK"

[node name="CancelButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 958.071
offset_top = 687.88
offset_right = 1198.07
offset_bottom = 807.88
theme_override_font_sizes/font_size = 34
text = "Cancel"
